Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/Case_Products__c.object-meta.xml
<CustomObject>
    <label>Case Products</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>Case Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>