Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Can_you_let_us_know_the_dealer_name__c.field-meta.xml
<CustomField>
    <fullName>Can_you_let_us_know_the_dealer_name__c</fullName>
    <label>Can you let us know the dealer name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>