Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>