Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Do_u_have_products_invoice_bill_copy__c.field-meta.xml
<CustomField>
    <fullName>Do_u_have_products_invoice_bill_copy__c</fullName>
    <label>Do u have products invoice / bill copy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>