Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What kind of issue you are facing Sir?</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You cannot select this issue</errorMessage>
        <filterItems>
            <field>$Source.Product_Family__c</field>
            <operation>equals</operation>
            <valueField>Problem__c.Product__r.Family</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Problem__c</referenceTo>
    <relationshipLabel>Case Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>