Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>product are you facing an issue?</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Products</relationshipLabel>
    <relationshipName>Case_Products</relationshipName>
    <type>Lookup</type>
</CustomField>