Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concealed Valve</fullName>
            </value>
            <value>
                <fullName>Concealed Diverter</fullName>
            </value>
            <value>
                <fullName>Angle Valve</fullName>
            </value>
            <value>
                <fullName>Water Tanks</fullName>
            </value>
            <value>
                <fullName>Flush Valve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>