Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>In how many products you have issues?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>