Partial_14Dec2021/force-app/main/default/objects/Case_Products__c/fields/When_did_you_purchase_the_product__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_purchase_the_product__c</fullName>
    <label>When did you purchase the product?</label>
    <type>Date</type>
</CustomField>